# measured

./: Cargo.toml  README.md  release-plz.toml
.cargo/: config.toml
.github/workflows/: release-plz.yml
core/: CHANGELOG.md  Cargo.toml
core/benches/: counters.rs  encoding.rs  high_cardinality.rs  histograms.rs  memory.rs
core/src/: docs.rs  label.rs  lib.rs  metric.rs  text.rs
core/src/docs/: details.rs  examples.rs  guide.rs
core/src/label/: group.rs  impls.rs  name.rs  value.rs
core/src/metric/: counter.rs  gauge.rs  group.rs  histogram.rs  name.rs  sparse.rs  sparse2.rs
core/tests/: comparisons.rs  histograms.rs
derive/: CHANGELOG.md  Cargo.toml
derive/src/: lib.rs
derive/src/group/: attr.rs  mod.rs  parse.rs  to_tokens.rs
derive/src/label_group/: attr.rs  mod.rs  parse.rs  to_tokens.rs
derive/src/metric_group/: attr.rs  mod.rs  parse.rs  to_tokens.rs
derive/src/value/: attr.rs  mod.rs  parse.rs  to_tokens.rs
docs/: measured.d2  prometheus.d2
examples/axum-server/: Cargo.toml
examples/axum-server/src/: main.rs  metrics.rs
process/: CHANGELOG.md  Cargo.toml
process/src/: lib.rs
prometheus-proto/: CHANGELOG.md  Cargo.toml  README.md
prometheus-proto/benches/: encoding.rs
prometheus-proto/src/: encoding.rs  generated.rs  lib.rs
registry/: Cargo.toml
registry/src/: lib.rs
src/: label.rs  lib.rs  text.rs
src/label/: impls.rs
tokio/: CHANGELOG.md  Cargo.toml  README.md
tokio/src/: lib.rs
