[package]
name = "measured"
version = "0.0.1"
edition = "2021"
description = "A better way to measure your application performance"
authors = ["Conrad Ludgate <conradludgate@gmail.com"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/conradludgate/measured"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "2"
lasso = "0.7"
