[package]
name = "measured-derive"
version = "0.0.18"
edition = "2021"
description = "A better way to measure your application performance"
authors = ["Conrad Ludgate <conradludgate@gmail.com"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/conradludgate/measured"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"
heck = "0.5.0"
# dbg-pls = { version = "0.4", features = ["colors", "derive"] }
