[package]
name = "measured-process"
version = "0.0.21"
edition = "2021"
description = "Linux process metrics for measured"
authors = ["Conrad Ludgate <conradludgate@gmail.com"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/conradludgate/measured"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
measured = { path = "../core", version = "0.0.21" }
libc = { version = "^0.2" }
procfs = { version = "^0.16", default-features = false }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]
