[package]
name = "measured-process"
version = "0.0.23"
edition = "2024"
description = "Linux process metrics for measured"
authors = ["Conrad Ludgate <conradludgate@gmail.com"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/conradludgate/measured"
readme = "../README.md"
rust-version = "1.88"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
measured = { path = "../core", version = "0.0.23" }
libc = { version = "^0.2" }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = { version = "^0.16", default-features = false }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]
