[package]
name = "measured-registry"
version = "0.0.24"
edition = "2024"
description = "Global registry for measured"
authors = ["Conrad Ludgate <conradludgate@gmail.com"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/conradludgate/measured"
readme = "../README.md"
rust-version = "1.88"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
measured = { path = "../core", version = "0.0.24" }
inventory = "0.1"

[dev-dependencies]
bytes = "1"
bstr = "1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
