[package]
name = "measured-tokio"
version = "0.0.21"
edition = "2021"
description = "Tokio metrics for measured"
authors = ["Conrad Ludgate <conradludgate@gmail.com"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/conradludgate/measured"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
net = ["tokio/net"]

[dependencies]
measured = { path = "../core", version = "0.0.21" }
tokio = { version = "1.37", features = ["rt"] }
itoa = "1"

[dev-dependencies]
tokio = { version = "1.37", features = ["rt", "rt-multi-thread"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg=tokio_unstable"]
