[package]
name = "measured-tokio"
version = "0.0.23"
edition = "2024"
description = "Tokio metrics for measured"
authors = ["Conrad Ludgate <conradludgate@gmail.com"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/conradludgate/measured"
readme = "README.md"
rust-version = "1.88"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
net = ["tokio/net"]

[dependencies]
measured = { path = "../core", version = "0.0.23" }
tokio = { version = "1.43.1", features = ["rt"] }
itoa = "1"

[dev-dependencies]
tokio = { version = "1.37", features = ["rt", "rt-multi-thread"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg=tokio_unstable"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }
